@@ -6,6 +6,9 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
   memory-mapped I/O and SYS calls. While the calls are recognised on all
   builds, it's only active on the Raspberry Pi.
 - Bug fix (regression): LIST in text builds would error after one line.
+- Adjust graphsdl.c:buff_convex_poly bounds checking to allow off-screen
+  drawing (we limit this elsewhere). For example, triangles drawn offscreen
+  will now appear to be chopped off, rather than squashed into the screen.
 - Code refactor - SYS calls are now (with a few exceptions) in their own file.
 - Implemented AND=, OR=, EOR=, MOD= and DIV= from BB4W/BBCSDL and JGH's
   ARM BBC BASIC Plus.
